# hla-simulator

./: .gitignore  CLAUDE_CODE_CONTEXT.md  CMakeLists.txt  PROJECT_SUMMARY.md  Project.md  README.md  UNREAL_PLAN.md
fom/: AircraftFOM.xml  RadarFOM.xml
src/: AircraftFederate.cpp  AircraftFederate.h  MonitorFederate.cpp  MonitorFederate.h  RadarFederate.cpp  RadarFederate.h  main.cpp  test_jsbsim.cpp
